# track-fm

./: .gitignore  ARCHITECTURAL_FLAW_ANALYSIS.md  HYPERPARAMETERS.md  LICENSE  MATERIALIZED_DATA.md  README.md  TRAINING_HANDOFF.md  create_collaborator_bundle.sh  experiments.json  pyproject.toml  requirements.txt  train.py  train.sh
.ipynb_checkpoints/: README-checkpoint.md  fourier_head-checkpoint.py
config/: custom_128freq.yaml  custom_20horizon_256freq.yaml  default.yaml
config/experiments/: fast_training.yaml  high_res.yaml
configs/data/: clean_dk.yaml  materialize_928.yaml  materialize_928_v3_sub200.yaml  materialize_golden69.yaml  materialize_smoke.yaml  port_registry_osm.json  port_registry_supplement.json
configs/downstream/: ports.yaml  ports_dest_smoke.yaml
configs/pretrain/: ablation_direct_head.yaml  flagship_xlarge_cone_mlp_26mo.yaml  golden_large.yaml  golden_medium.yaml  large.yaml  medium.yaml  mup_cone_d128.yaml  mup_cone_d384.yaml  mup_cone_d768.yaml  scaling_large_50M.yaml  (+54 more)
docs/: DATA_AND_CONDITIONING.md  DECISIONS.md  MIGRATION.md  PAPER_PLAN.md  RUN_NAMES.md
experiments/: ax_optimize.py
notebooks/: four_head_2D.ipynb  four_head_real_data.ipynb  four_head_real_data_local.ipynb  localied_four_head_test.ipynb
paper/: references.bib  results_master.md  trackfm.tex
scripts/: aliasing_analysis.py  ar_rollout_pilot.py  build_geo_static.py  build_traffic_prior.py  build_vessel_v2.py  c1_headroom.py  c1_traffic.py  c1_traffic_underway.py  c1_tube.py  check_pdf_normalization.py  compare_original_vs_horizon_aware.py  conformal_columns.py  corrected_model_analysis.py  create_forecast_video.py  dr_null_gate.py  fair_window_baselines.py  filter_moving_vessels.py  find_fast_moving_sample.py  ft_vessel_probe.py  ft_vessel_probe_v2.py  gen_dissociation_scatter.py  gen_ft_round2_charts.py  gen_old_vs_new_chart.py  gen_scaling_containment_figure.py  gen_scaling_figures.py  gen_sp_baseline.py  gen_widegrid_chart.py  gpu_peak_bench.py  head_ladder.py  land_leakage.py  max_batch_sweep.py  mlflow-server.sh  monitor_loss.py  monitor_training.py  mup_crosswidth_smoke.py  rescore_v2.py  run_scaling_study.sh  show_training_summary.py  status.sh  test_original_model_horizon_issue.py  (+14 more)
src/: GMM_head.py  GMM_head_2D.py  four_head.py  four_head_2D_LR.py  nano_gpt_trajectory.py
trackfm/: __init__.py  config.py  nano_gpt_trajectory.py  trackfm_dataset.py  trackfm_model.py  train_trackfm.py
(+442 files in other folders)
