[project]
name = "trackfm"
version = "2.0.0"
description = "TrackFM: a foundation model for vessel trajectory understanding"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Paul Singerman", email = "pgs16@psu.edu" },
]
dependencies = [
    "torch>=2.7",
    "polars>=1.30",
    "pyarrow>=20.0",
    "numpy>=2.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
    "mlflow>=2.22",
    "ax-platform>=0.4",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "geopy>=2.4",
    "tqdm>=4.66",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
]

[project.scripts]
trackfm = "trackfm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackfm"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gpu: tests requiring a CUDA device"]
